Attempt to fix table spilling over on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,6 +90,11 @@ a:hover, a:active {
 	display: inline;
 }
 
+.post table {
+	max-width: 100%;
+	overflow: scroll;
+}
+
 .post .more {
 	text-align: center;
 }
